--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^18.15.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "apexcharts": "^3.41.1",
     "assert": "^2.0.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
@@ -35,6 +36,7 @@
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
