page: validator info (#110)
Co-authored-by: cuteolaf <oliverlim818@gmail.com>

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.0",
+    "@types/lodash": "^4.14.198",
     "@types/node": "^18.15.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -31,6 +32,7 @@
     "echarts": "^5.4.2",
     "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
+    "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
