--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "echarts": "^5.4.2",
     "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
+    "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "os": "^0.1.2",
