--- a/.github/workflows/mark-closed-issues-to-release.yml
+++ b/.github/workflows/mark-closed-issues-to-release.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Get token
         id: get-token
-        uses: topmonks/app-auth-action@v1
+        uses: TaoStats/app-auth-action@v1
         with:
           appId: ${{ secrets.PROJECTS_AND_ISSUES_APP_ID }}
           appPrivateKey: ${{ secrets.PROJECTS_AND_ISSUES_APP_PRIVATE_KEY }}
@@ -20,7 +20,7 @@ jobs:
         uses: leonsteinhaeuser/project-beta-automations@v2.0.1
         with:
           gh_token: ${{ steps.get-token.outputs.token }}
-          organization: topmonks
+          organization: TaoStats
           project_id: 11
           resource_node_id: ${{ github.event.issue.node_id }}
           status_value: ${{ github.event.issue.state_reason == 'not_planned' && 'Done' || 'To Release' }}
