--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "deepmerge": "^4.3.1",
     "dotenv": "^16.3.1",
     "echarts": "^5.4.2",
+    "export-to-csv": "^1.2.1",
     "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
     "js-file-download": "^0.4.12",
